FireAlarmApplication.Web/mtg_debug_20260127_163259.txt

=== MTG FIRE DEBUG ===
Time: 2026-01-27 16:32:59
NetCDF: C:\Users\kubil\AppData\Local\Temp\c6c4fa92-31b7-4c17-a5b1-0cb1ecf7d351.nc

=== PYTHON STDERR (Debug Output) ===
  File "C:\Users\kubil\source\repos\FireAlarmApplication\FireAlarmApplication.Web\Scripts\parse_mtg_fire.py", line 32
    max_lat = float(parts[2])x""
                             ^
SyntaxError: invalid syntax


=== PYTHON STDOUT (JSON Output) ===


=== EXIT CODE ===
1
